@@ -234,6 +234,17 @@
       </component>
     </version>
   </module>
+  <module name="brasero">
+    <version release="HEAD">
+      <component name="brasero" dir="brasero" group="extras">
+        <podir dir="po"/>
+        <potname name="brasero.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="bug-buddy">
     <version release="gnome-2.14">
       <component name="bug-buddy" dir="bug-buddy" group="desktop">
