@@ -1,3 +1,7 @@
+2006-10-14  Wouter Bolsterlee  <wbolster@gnome.org>
+
+	* translation-status.xml: Added brasero module.
+
 2006-10-09  Abel Cheung  <abel@oaka.org>
 
 	* translation-status.xml: set stable branch for gthumb.
